--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
+
+<head>
     <title>D3.js Walkthrough</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+    <div id="content"></div>
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
+
 </html>
